@@ -1,3 +1,7 @@
+2008-02-03  Ales Hakl  <ales at hakl dot net>
+
+	* dfsch/util.h: utility functions in public API
+
 2008-01-27  Ales Hakl  <ales at hakl dot net>
 
 	* lib/extref.c: External references
